# my-digital-twin

./: LICENSE  README.md
backend/: context.py  pyproject.toml  resources.py
backend/data/: facts.json  resume.txt  style.txt  summary.txt
frontend/app/: page.tsx
frontend/components/: twin.tsx
