[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.38",
    "fastapi>=0.128.0",
    "mangum>=0.20.0",
    "openai>=2.15.0",
    "pdfplumber>=0.11.9",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
